[project]
name = "git-remote-s3"
version = "0.3.0"
description = "A git remote helper for Amazon S3"
authors = [{ "email" =  "Massimiliano Angelino <angmas@amazon.com>"} ]
repository = "https://github.com/awslabs/git-remote-s3"
classifiers = [
    "Topic :: Software Development :: Version Control", 
    "Topic :: Software Development :: Version Control :: Git"
    ]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "boto3 (>=1.42.24,<2.0.0)",
    "botocore (>=1.42.24,<2.0.0)",
    "urllib3 (>=2.6.3,<3.0.0)"
]

[project.scripts]
git-remote-s3 = "git_remote_s3.remote:main"
"git-remote-s3+zip" = "git_remote_s3.remote:main"
git-lfs-s3 = "git_remote_s3.lfs:main"
git-s3 = "git_remote_s3.manage:main"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-bugbear = "^24.4.26"
mypy = "^1.11.1"
pytest = "^8.3.2"
mock = "^5.1.0"
black = "^26.3.1"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
